# baselion-jury-condorcet-voting

./: README.md  pyproject.toml
src/baselion_jury/: __init__.py
