[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselion-jury-condorcet-voting"
version = "0.1.0"
description = "Educational Condorcet / Schulze / Copeland / Ranked Pairs implementations applied to trading-signal aggregation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Baselion", email = "opensource@baselion.ai" }]
maintainers = [{ name = "Paulo Fox" }]
keywords = ["quantitative-finance", "algorithmic-trading", "baselion", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.urls]
Homepage = "https://baselion.ai"
Documentation = "https://docs.baselion.ai"
Repository = "https://github.com/Baselion-ai/baselion-jury-condorcet-voting"
Issues = "https://github.com/Baselion-ai/baselion-jury-condorcet-voting/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
